      of a recommended distribution. Since OTLP is the default
      exporter for the SDK, it doesn't make sense to ship without it.
      The reason it was released as a separate distribution was
      initially because it depended on Google::ProtocolBuffers::Dynamic,
      but now it doesn't: it will use that distribution if it is
      available but use JSON otherwise.

0.024     2024-08-02 15:28:11+01:00 Europe/London

    * Use bigfloat instead of bignum in TraceIDRatioBased sampler
      to avoid complications in other code relaying on Math::BigInt
      and friends. This adds a dependency on Math::BigInt 0.65.
      See GH #16.

0.023001  2024-07-18 10:38:35+01:00 Europe/London (TRIAL RELEASE)

    * Add a `process` method to the Simple and Batch span processors
      to prepare for an upcoming change to the API to support
      OpenTelemetry logs. Their `on_end` methods now are thin wrappers
      to these new methods.

0.022     2024-04-19 11:46:54+01:00 Europe/London

    * Do not call start on the background function in the batch span
      processor, this is handled automatically by the loop (GH #13)

0.021     2023-12-03 14:46:29+00:00 Europe/London

    * Clarify meaning of OTEL_BSP_EXPORT_TIMEOUT in POD
    * Minor correction in Resource POD

0.020     2023-11-26 16:18:52+00:00 Europe/London

    * Switch Metrics::Any client to strict mode, to allow for automatic
      metric name generation. This means the metrics can be exported
      with adapters that don't allow periods (eg. Prometheus). This
      means some metrics had to be renamed:
      - otel.bsp.export.success -> otel.bsp.success
      - otel.bsp.export.failure -> otel.bsp.failure
      - otel.bsp.dropped_spans -> otel.bsp.spans.dropped
      - otel.bsp.exported_spans -> otel.bsp.spans.processed
      - otel.bsp.buffer_utilization -> otel.bsp.buffer.utilization

0.019     2023-11-23 19:31:08+00:00 Europe/London

    * Validate span processors when adding them to the TracerProvider